--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
       <input class="ciphertext" type="text" id="ciphertextxorresult" name="ciphertext" value="3b101c091d53320c000910" disabled>
     </div>
 </div>
+<div class="messages">
+  <div class="message1">
+    <textarea class="message-textarea-left" rows="4" cols="50" disabled>
+      Message 1 Results
+    </textarea>
+  </div>
+  <div class="message2">
+    <textarea class="message-textarea-right" rows="4" cols="50" disabled>
+      Message 2 Results
+    </textarea>
+  </div>
+  </div>
 <div id="crib-slider" class="crib-slider">
   <div class="xor-ciphers">
     <table id="xor-ciphers-table" class="xor-ciphers-table">
