--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Crib Drag - Online Crib Dragging Tool</title>
+  <title>Crib Drag - Online Interactive Crib Dragging Tool</title>
   <meta name="description" content="Online Crib Dragging Tool">
   <meta name="author" content="Zachary McGee">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
