--- a/one-time-pad.html
+++ b/one-time-pad.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Crib Drag - Online Crib Dragging Tool</title>
-  <meta name="description" content="Online Crib Dragging Tool">
+  <title>Crib Drag - Online One-Time Pad Generator Tool</title>
+  <meta name="description" content="Online One-Time Pad Generator Tool">
   <meta name="author" content="Zachary McGee">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
